<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TermTracker</string>
    <string name="current_term">Current Term</string>
    <string name="all_terms_header">All Terms</string>
    <string name="menu_icon">menu icon</string>
    <string name="add_term_heading">Add Term</string>
    <string name="term_name_label">Term Name:</string>
    <string name="start_date_label">Start Date:</string>
    <string name="end_date_label">End Date:</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="add_new_term_header">Add New Term</string>
    <string name="all_courses_header">All Courses</string>
    <string name="all_assessments_header">All Assessments</string>
    <string name="overview_heading">Overview</string>
    <string name="term_details_header">Term Details</string>
    <string name="add_course_header">Add Course</string>
    <string name="course_name_label">Course Name:</string>
    <string name="course_details_subHeading">Course Details</string>
    <string name="addNew_btn_desc">plus button</string>
    <string name="course_term_label">Term:</string>
    <string name="status_label">Status:</string>
    <string name="instructor_info_subHeader">Instructor Info</string>
    <string name="instructor_name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="assessments_subHeader">Assessments</string>
    <string name="notes_subHeader">Notes</string>
    <string name="add_assessment_heading">Add Assessment</string>
    <string name="assessment_title_label">Assessment Title:</string>
    <string name="assessment_type_label">Assessment Type:</string>
    <string name="add_note_heading">Add Note</string>
    <string name="note_prompt">Write your note here</string>
    <string name="welcome_text">Welcome to</string>
    <string name="enter">Enter</string>
    <string name="hyphen">–</string>
    <string name="no_name">No name</string>
    <string name="no_start_date">No start date</string>
    <string name="no_end_date">No end date</string>
    <string name="add_new_term">Add New Term</string>
    <string name="no_prof_name">No instructor name</string>
    <string name="add_new_course">Add New Course</string>
    <string name="add_new_assessment">Add New Assessment</string>
    <string name="no_title">No title</string>
    <string name="no_date">No date</string>
    <string name="no_type">No type</string>
    <string name="course_details">Course Details</string>
    <string name="assessment_details">Assessment Details</string>
    <string name="add_new_note">Add New Note</string>
    <string name="date_label">Date:</string>
    <string name="course_label">Course:</string>
    <string name="colon">:</string>
    <string name="add_or_edit_term">Add/Edit Term</string>
    <string name="note_title_label">Note Title:</string>
    <string name="noTitle">No Title</string>
    <string name="noNote">No note</string>
    <string name="addEdit_course">Add/Edit Course</string>
    <string name="addEdit_assessment">Add/Edit Assessment</string>
    <string name="addEdit_note">Add/Edit Note</string>
    <string name="note_details">Note Details</string>
    <string name="menu_text_edit">Edit</string>
    <string name="menu_text_delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this?</string>
    <string name="cancel_btn" tools:ignore="ButtonCase">CANCEL</string>
    <string name="delete_btn">DELETE</string>
    <string name="cannot_delete_terms_that_contain_courses">Cannot delete terms that contain courses</string>
    <string name="term_deleted_confirmation">Term successfully deleted</string>
    <string name="note_deleted_confirmation">Note successfully deleted</string>
    <string name="course_deleted_confirmation">Course successfully deleted</string>
    <string name="assessment_deleted_confirmation">Assessment successfully deleted</string>
    <string name="share">Share</string>
    <string name="set_alert">Set Alert</string>
    <string name="channel_name">myChannel</string>
    <string name="channel_description">channel description</string>
    <string name="when_would_you_like_to_be_notified">When would you like to be notified?</string>
    <string name="when_my_course_starts">When my course STARTS</string>
    <string name="when_my_course_ends">When my course ENDS</string>
    <string name="alert_set">Alert set!</string>
</resources>