<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eggshell"
    tools:context=".UI.AllTerms">

    <LinearLayout
        android:id="@+id/btnBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:background="@drawable/btn_rect_eggshell"
            android:id="@+id/allTermsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:text="@string/all_terms_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/allCoursesBtn"
            android:backgroundTint="@color/eggshell"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:background="@drawable/btn_rect_eggshell"
            android:id="@+id/allCoursesBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.05"
            android:text="@string/all_courses_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/allTermsBtn"
            app:layout_constraintRight_toLeftOf="@id/allAssessments"
            android:backgroundTint="@color/apricot"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="12sp"
            android:onClick="viewAllCourses"/>
        <Button
            android:background="@drawable/btn_rect_eggshell"
            android:id="@+id/allAssessments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/all_assessments_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/allCoursesBtn"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/apricot"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="12sp"
            android:onClick="viewAllAssessments"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBar">

    <LinearLayout
        android:id="@+id/allTermsContentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBar"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        android:paddingTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/allTermsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_header"
            android:textAlignment="center"
            android:textAppearance="@style/heading"
            android:layout_marginTop="10dp"
            app:layout_constraintVertical_bias="0.09"
            app:layout_constraintTop_toBottomOf="@id/btnBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allTermsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/allTermsHeader"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/allTermsRecyclerView"
            android:layout_marginTop="-10dp">

        <ImageButton
            android:id="@+id/addTermBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/add_icon_foreground"
            android:background="#0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/addNewTermLabel"
            app:layout_constraintTop_toBottomOf="parent"
            android:onClick="addNewTerm"
            android:contentDescription="@string/addNew_btn_desc"
            android:layout_marginStart="-9dp"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:id="@+id/addNewTermLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_term"
            android:textAppearance="@style/addNew"
            app:layout_constraintBottom_toBottomOf="@id/addTermBtn"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>