<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eggshell"
    tools:context=".UI.AllAssessments">

    <LinearLayout
        android:id="@+id/btnBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:background="@drawable/btn_rect_eggshell"
            android:id="@+id/allTermsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:text="@string/all_terms_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/allCoursesBtn"
            android:backgroundTint="@color/eggshell"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="12sp"
            android:onClick="viewAllTerms"/>

        <Button
            android:background="@drawable/btn_rect_eggshell"
            android:id="@+id/allCoursesBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.05"
            android:text="@string/all_courses_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/allTermsBtn"
            app:layout_constraintRight_toLeftOf="@id/allAssessmentsBtn"
            android:backgroundTint="@color/apricot"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="12sp"
            android:onClick="viewAllCourses"/>

        <Button
            android:background="@drawable/btn_rect_eggshell"
            android:id="@+id/allAssessmentsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/all_assessments_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/allCoursesBtn"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/apricot"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBar">

        <LinearLayout
            android:id="@+id/allTermsContentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="40dp"
            android:paddingTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:id="@+id/allTermsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/all_assessments_header"
                android:textAlignment="center"
                android:textAppearance="@style/heading" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/allAssessmentsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/allTermsHeader" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/allTermsRecyclerView">

                <ImageButton
                    android:id="@+id/addAssessmentBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="-9dp"
                    android:layout_marginEnd="3dp"
                    android:background="#0000"
                    android:contentDescription="@string/addNew_btn_desc"
                    android:onClick="addNewAssessment"
                    android:src="@drawable/add_icon_foreground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/addNewAssessmentLabel"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/addNewAssessmentLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_assessment"
                    android:textAppearance="@style/addNew"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/addAssessmentBtn"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>