<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:animateLayoutChanges="true">
    <LinearLayout
        android:id="@+id/dialogOverlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#73000000"
        android:gravity="center"
        android:visibility="gone">

    <LinearLayout
        android:id="@+id/alertDialog"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/eggshell"
        android:visibility="gone">

        <TextView
            android:id="@+id/alertDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_alert"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/manrope_extrabold"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/alertDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/when_would_you_like_to_be_notified"
            android:textSize="16sp"
            android:textColor="@color/softblack"
            android:fontFamily="@font/manrope_medium"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="9dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <CheckBox
            android:id="@+id/startDateCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/manrope_medium"
            android:textSize="13.5sp"
            android:textColor="@color/softblack"
            android:layout_marginStart="-6.5dp"/>

        <CheckBox
            android:id="@+id/endDateCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/manrope_medium"
            android:textSize="13.5sp"
            android:textColor="@color/softblack"
            android:layout_marginStart="-6.5dp"/>

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogText"
        android:gravity="end"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/alertSetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_alert"
            android:textSize="14sp"
            android:textColor="@color/rose"
            android:letterSpacing="0.1"
            android:fontFamily="@font/manrope_extrabold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toStartOf="@id/deleteBtn"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:onClick="onSetAlert"/>

        <Button
            android:id="@+id/alertCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:letterSpacing="0.1"
            android:fontFamily="@font/manrope_extrabold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toStartOf="@id/deleteBtn"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:onClick="cancelAlert"/>
       </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteDialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingBottom="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/eggshell"
            android:visibility="gone">

            <TextView
                android:id="@+id/dialogText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_confirmation"
                android:textSize="19sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/manrope"
                android:lineSpacingExtra="4sp"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogText"
                android:gravity="end"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_btn"
                    android:textSize="14sp"
                    android:textColor="@color/rose"
                    android:letterSpacing="0.1"
                    android:fontFamily="@font/manrope_extrabold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/deleteBtn"
                    app:layout_constraintTop_toTopOf="parent"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginEnd="10dp"
                    android:onClick="cancelDelete"/>

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_btn"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:letterSpacing="0.1"
                    android:fontFamily="@font/manrope_extrabold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/cancelBtn"
                    app:layout_constraintTop_toTopOf="parent"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="deleteTerm"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/customToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="20dp"
        android:visibility="gone">

    <TextView
        android:id="@+id/toastText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cannot_delete_terms_that_contain_courses"
        android:textColor="@color/eggshell"
        android:fontFamily="@font/manrope"
        android:background="@color/rose"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>