<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddNote"
    android:background="@color/eggshell">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start"
        android:layout_gravity = "top">

        <LinearLayout
            android:id="@+id/contentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:padding="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addNoteHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_note_heading"
                android:textAlignment="center"
                android:textAppearance="@style/heading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:id="@+id/noteTitleBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addNoteHeading">

                <TextView
                    android:id="@+id/noteTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/listItemHeading"
                    android:text="@string/note_title_label"
                    android:textSize="16sp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toStartOf="@id/noteTitleText"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/noteTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/listItemField"
                    android:textColor="@color/softblack"
                    app:layout_constraintStart_toEndOf="@id/noteTitleLabel"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteTitleBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/manrope"
                android:textSize="14sp"
                android:hint="@string/note_prompt"
                android:autofillHints="@string/note_prompt"
                android:inputType="textMultiLine|textLongMessage"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="top|start"
                android:layout_gravity="top|start"
                android:background="@null"
                android:ellipsize="end"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:lines="19"/>
        </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:id="@+id/navBtnsBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noteInput"
                android:layout_marginTop="20dp">

                <Space
                    android:id="@+id/fillGap2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@id/saveBtn"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/saveBtn"
                    style="@style/saveBtn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/fillGap2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="handleSave"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>